Cleanup & added database entry page

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -22,7 +22,12 @@
                 <li>
                     <a href="#">Contact</a>
                 </li>
+
             </ul>
+               <form id='search-bar' action="#">
+                 <input type="text" name="search" value="Search...">
+                 <!-- <input type="submit" value="Submit"> -->
+                </form>
         </div>
         <!-- /.navbar-collapse -->
     </div>
