--- a/templates/table.html
+++ b/templates/table.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>3 Col Portfolio - Start Bootstrap Template</title>
+    <title>Open Sesame</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -37,14 +37,17 @@
 
 <script src="../js/jquery.js"></script>
 <script src="../js/bootstrap.min.js"></script>
+<script src="../js/script.js"></script>
 <script>
 $('td').css('color','green');
 </script>
-<script>
+
+<!-- <script>
 $(function(){
   $("#nav-placeholder").load("navigation.html");
 });
-</script>
+</script> -->
+
 <!-- <script src ='../js/d3tablemaker.js'></script> -->
 <script src="https://d3js.org/d3.v3.min.js"></script>
    <!-- <script src="d3.min.js?v=3.2.8"></script> -->
