--- a/css/3-col-portfolio.css
+++ b/css/3-col-portfolio.css
@@ -24,8 +24,8 @@ body {
 }
 
 #search-bar {
-  margin-bottom:20px;
-  font-size: 18px;
+  margin: 10px;
+  font-size: 16px;
   height: 20px;
   float: right;
 }
@@ -76,6 +76,15 @@ td {
   color: red;
   font-size:16px;
 }*/
+#new-database-contents input {
+  width: 400px;
+}
+#btn-add {
+  margin: 20px !imporant;
+  width: 200px;
+
+}
+
 
 footer {
     margin: 50px 0;
