--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -3,11 +3,12 @@
 <head>
 <title>OpenSesame</title>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+<link rel="stylesheet" type="text/css" href="public/css/style.css">
 </head>
 
 <body>
   <h1>OpenSesame Prototype</h1>
+  <img class='smallpic' src='public/img/sesame.jpg' />
   <div class='container'>
     <p>things are brewin'</p>
   </div>
