--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -10,6 +10,6 @@
   <h1>OpenSesame Prototype</h1>
   <img class='smallpic' src='public/img/sesame.jpg' />
   <div class='container'>
-    <p>things are brewin'</p>
+    <a href='/datapage'>3-1-1 Case Volume</a>
   </div>
 </body>
